--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>i kinda only made a github account for silly things</h1>
     <p>and i still use it for that</p>
     <p>and its fun learning new things on here</p>
+    <button>i made a button :D</button>
   </body>
 </html>
