--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>this is my first time coding in html</title>
   </head>
-  <body>
+  <body style="text-align: center">
     <h1>i kinda only made a github account for silly things</h1>
     <p>and i still use it for that</p>
     <p>and its fun learning new things on here</p>
-    <button>i made a button :D</button>
+    <button onclick="alert('dont mess with my first website stop clicking stuff')>i made a button :D</button>
   </body>
 </html>
