i figured out COLORS

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>this is my first time coding in html</title>
   </head>
   <body style="text-align: center">
-    <h1>i kinda only made a github account for silly things</h1>
-    <p>and i still use it for that</p>
+    <h1 style="color: red">i kinda only made a github account for silly things</h1>
+    <h2 style="color= crimson">and i still use it for that</p>
     <p>and its fun learning new things on here</p>
     <button onclick="alert('dont mess with my first website stop clicking stuff')">i made a button :D</button>
   </body>
