--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>this is my first time coding in html</title>
   </head>
-  <body style="text-align: center">
+  <body style="text-align: center; background-color: lightblue;">
     <h1 style="color: red">i kinda only made a github account for silly things</h1>
     <h2 style="color= crimson">and i still use it for that</p>
     <p>and its fun learning new things on here</p>
