updated because i finally understand what alt means for images now

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h2 style="color= crimson">and i still use it for that</p>
     <p>and its fun learning new things on here</p>
     <button onclick="alert('dont mess with my first website stop clicking stuff')">i made a button :D</button>
-      <img src="css3-html5-logo-500px.png" alt="programmed with" />
+      <img src="css3-html5-logo-500px.png" alt="programmed with css and html" />
   </body>
 </html>
