--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h2 style="color= orange">and i still use it for that</p>
     <p>and its fun learning new things on here</p>
     <button onclick="alert('dont mess with my first website stop clicking stuff')">i made a button :D</button>
-      <p> style="color:yellow"> this website was programmed with</p>
+      <p style="color:yellow"> this website was programmed with</p>
       <img src="css3-html5-logo-500px.png" alt="programmed with css and html" />
   </body>
 </html>
