--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>this is my first time coding in html</title>
   </head>
   <body style="text-align: center; background-color: lightblue;">
+    <audio src="Ambient-2025-03-27_-_Anhedonia_-_www.FesliyanStudios.com.mp3" autoplay loop hidden></audio>
     <h1 style="color: red">i kinda only made a github account for silly things</h1>
     <h2 style="color: orange">and i still use it for that</p>
     <p>and its fun learning new things on here</p>
