--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
-<!DOCNAME html>
-  <html>
+<!DOCTYPE html>
+<html>
   <head>
     <title>this is my first time coding in html</title>
   </head>
   <body style="text-align: center; background-color: lightblue;">
     <audio src="Ambient-2025-03-27_-_Anhedonia_-_www.FesliyanStudios.com.mp3" autoplay loop hidden></audio>
+
     <h1 style="color: red">i kinda only made a github account for silly things</h1>
-    <h2 style="color: orange">and i still use it for that</p>
+
+    
+    <h2 style="color: orange">and i still use it for that</h2>
+
     <p>and its fun learning new things on here</p>
-    <button onclick="alert('dont mess with my first website stop clicking stuff')">i made a button :D</button>
-      <p style="color:yellow"> this website was programmed with</p>
-      <img src="css3-html5-logo-500px.png" alt="programmed with css and html" />
+
+    <button onclick="alert('dont mess with my first website stop clicking stuff')">
+      i made a button :D
+    </button>
+
+    <p style="color: yellow;">this website was programmed with</p>
+
+    <img src="css3-html5-logo-500px.png" alt="programmed with css and html" />
   </body>
 </html>
