--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
     <p style="color: yellow;">this website was programmed with</p>
 
     <img src="css3-html5-logo-500px.png" alt="programmed with css and html" />
+
+    <hr>
+
+    <div style="text-align: left;">
+      <h2>i kinda love making websites now</h2>
+      <p>im happy :D</p>
+    </div>
   </body>
 </html>
