--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>this is my first time coding in html</title>
   </head>
-  <body style="text-align: center; background-color: lightblue;">
+  <body style="text-align: center; background: linear-gradient(to right, lightblue, blue, darkblue">
     <audio src="Ambient-2025-03-27_-_Anhedonia_-_www.FesliyanStudios.com.mp3" autoplay loop hidden></audio>
 
     <h1 style="color: red">i kinda only made a github account for silly things</h1>
