--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>this is my first time coding in html</title>
+    <title>hi omg you found my website XD :3</title>
   </head>
   <body style="text-align: center; background: linear-gradient(to right, lightblue, blue, darkblue)">
     <audio src="Ambient-2025-03-27_-_Anhedonia_-_www.FesliyanStudios.com.mp3" autoplay loop hidden></audio>
