--- a/index.html
+++ b/index.html
@@ -1,15 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>hi omg you found my website XD :3</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+    <style>
+      /* Reset and base styles */
+      body {
+        font-family: 'Poppins', sans-serif;
+        background: linear-gradient(135deg, #a8edea, #fed6e3);
+        color: #222;
+        margin: 0;
+        padding: 40px 20px;
+        text-align: center;
+      }
+      h1 {
+        color: #e63946; /* modern red */
+        font-size: 3rem;
+        margin-bottom: 0.3em;
+      }
+      h2 {
+        color: #f4a261; /* mellow orange */
+        font-size: 2rem;
+        margin-top: 0;
+        margin-bottom: 0.6em;
+      }
+      p {
+        max-width: 600px;
+        margin: 0 auto 1.5em;
+        font-size: 1.1rem;
+        line-height: 1.6;
+        color: #555;
+      }
+      button {
+        background-color: #4a90e2;
+        border: none;
+        padding: 12px 28px;
+        border-radius: 25px;
+        color: white;
+        font-weight: 600;
+        font-size: 1rem;
+        cursor: pointer;
+        box-shadow: 0 4px 8px rgba(74, 144, 226, 0.4);
+        transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      }
+      button:hover {
+        background-color: #357abd;
+        box-shadow: 0 6px 12px rgba(53, 122, 189, 0.6);
+      }
+      img {
+        max-width: 180px;
+        margin-top: 20px;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      }
+      hr {
+        margin: 40px auto;
+        width: 80%;
+        border: none;
+        border-top: 2px solid #ccc;
+      }
+      /* Left-aligned content below the line */
+      .left-section {
+        text-align: left;
+        max-width: 600px;
+        margin: 0 auto;
+        color: #444;
+      }
+      .left-section h2 {
+        color: #f4a261;
+      }
+    </style>
   </head>
-  <body style="text-align: center; background: linear-gradient(to right, lightblue, blue, darkblue)">
+  <body>
     <audio src="Ambient-2025-03-27_-_Anhedonia_-_www.FesliyanStudios.com.mp3" autoplay loop hidden></audio>
 
-    <h1 style="color: red">i kinda only made a github account for silly things</h1>
+    <h1>i kinda only made a github account for silly things</h1>
 
-    
-    <h2 style="color: orange">and i still use it for that</h2>
+    <h2>and i still use it for that</h2>
 
     <p>and its fun learning new things on here</p>
 
@@ -17,13 +86,13 @@
       i made a button :D
     </button>
 
-    <p style="color: yellow;">this website was programmed with</p>
+    <p style="color: #e9c46a; font-weight: 600; margin-top: 30px;">this website was programmed with</p>
 
     <img src="css3-html5-logo-500px.png" alt="programmed with css and html" />
 
-    <hr>
+    <hr />
 
-    <div style="text-align: left;">
+    <div class="left-section">
       <h2>i kinda love making websites now</h2>
       <p>im happy :D</p>
     </div>
