--- a/index.html
+++ b/index.html
@@ -1,124 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>hi omg you found my website XD :3</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
-    <style>
-      /* Reset and base styles */
-      body {
-        font-family: 'Poppins', sans-serif;
-        background: linear-gradient(135deg, #a8edea, #fed6e3);
-        color: #222;
-        margin: 0;
-        padding: 40px 20px;
-        text-align: center;
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>hi omg you found my website XD :3</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #a8edea, #fed6e3);
+      color: #222;
+      margin: 0;
+      padding: 40px 20px;
+      text-align: center;
+      overflow-x: hidden;
+    }
+    h1 {
+      font-size: 3rem;
+      color: #e63946;
+    }
+    h2 {
+      font-size: 2rem;
+      color: #f4a261;
+    }
+    p {
+      max-width: 600px;
+      margin: 1em auto;
+      font-size: 1.1rem;
+      color: #555;
+    }
+    button {
+      background-color: #4a90e2;
+      border: none;
+      padding: 12px 28px;
+      border-radius: 25px;
+      color: white;
+      font-weight: 600;
+      font-size: 1rem;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(74, 144, 226, 0.4);
+      transition: all 0.3s ease;
+    }
+    button:hover {
+      background-color: #357abd;
+      box-shadow: 0 6px 12px rgba(53, 122, 189, 0.6);
+    }
+    .glitch {
+      animation: glitch 0.3s ease-in-out;
+    }
+    @keyframes glitch {
+      0% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      50% { transform: translateX(5px); }
+      75% { transform: translateX(-5px); }
+      100% { transform: translateX(0); }
+    }
+
+    #dialogue {
+      position: fixed;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #000;
+      color: #0f0;
+      padding: 16px 22px;
+      border-radius: 10px;
+      font-weight: bold;
+      display: none;
+      z-index: 9999;
+      font-family: monospace;
+      box-shadow: 0 0 10px #0f0;
+    }
+  </style>
+</head>
+<body>
+  <h1>i kinda only made a github account for silly things</h1>
+  <h2>and i still use it for that</h2>
+  <p id="secret-text">there's literally nothing interesting here lol</p>
+
+  <button id="clickMe">dont click me fr</button>
+
+  <div id="dialogue"></div>
+
+  <script>
+    let clicked = 0;
+    const btn = document.getElementById('clickMe');
+    const dialogue = document.getElementById('dialogue');
+    const secretText = document.getElementById('secret-text');
+
+    const narratorLines = [
+      "Why did you click that?",
+      "I said don't click it...",
+      "Okay now you're just being annoying.",
+      "Seriously. Stop.",
+      "I'm not a game. This isn't a game.",
+      "...fine. You want weird? You get weird."
+    ];
+
+    btn.addEventListener('click', () => {
+      btn.classList.add('glitch');
+      setTimeout(() => btn.classList.remove('glitch'), 300);
+
+      if (clicked < narratorLines.length) {
+        showDialogue(narratorLines[clicked]);
+      } else if (clicked === narratorLines.length) {
+        document.body.style.background = "#000";
+        secretText.textContent = "you’ve broken it.";
+        secretText.style.color = "#0f0";
+        showDialogue("...you’ll regret this.");
       }
-      h1 {
-        color: #e63946; /* modern red */
-        font-size: 3rem;
-        margin-bottom: 0.3em;
-      }
-      h2 {
-        color: #f4a261; /* mellow orange */
-        font-size: 2rem;
-        margin-top: 0;
-        margin-bottom: 0.6em;
-      }
-      p {
-        max-width: 600px;
-        margin: 0 auto 1.5em;
-        font-size: 1.1rem;
-        line-height: 1.6;
-        color: #555;
-      }
-      button {
-        background-color: #4a90e2;
-        border: none;
-        padding: 12px 28px;
-        border-radius: 25px;
-        color: white;
-        font-weight: 600;
-        font-size: 1rem;
-        cursor: pointer;
-        box-shadow: 0 4px 8px rgba(74, 144, 226, 0.4);
-        transition: background-color 0.3s ease, box-shadow 0.3s ease;
-      }
-      button:hover {
-        background-color: #357abd;
-        box-shadow: 0 6px 12px rgba(53, 122, 189, 0.6);
-      }
-      img {
-        max-width: 180px;
-        margin-top: 20px;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      }
-      hr {
-        margin: 40px auto;
-        width: 80%;
-        border: none;
-        border-top: 2px solid #ccc;
-      }
-      /* Left-aligned content below the line */
-      .left-section {
-        text-align: left;
-        max-width: 600px;
-        margin: 0 auto;
-        color: #444;
-      }
-      .left-section h2 {
-        color: #f4a261;
-      }
-    </style>
-  </head>
-  <body>
-    <audio src="Ambient-2025-03-27_-_Anhedonia_-_www.FesliyanStudios.com.mp3" autoplay loop hidden></audio>
+      clicked++;
+    });
 
-    <h1>i kinda only made a github account for silly things</h1>
-
-    <h2>and i still use it for that</h2>
-
-    <p>and its fun learning new things on here</p>
-
-<button onclick="showNotification('Don’t mess with my first website, stop clicking stuff!')">i made a button :D</button>
-    
-
-
-    <div id="notification" style="display:none; position: fixed; top: 20px; right: 20px; background: #4a90e2; color: white; padding: 15px 25px; border-radius: 8px; box-shadow: 0 4px 12px rgba(74, 144, 226, 0.6); font-weight: 600; z-index: 9999; opacity: 0; transition: opacity 0.5s ease, transform 0.5s ease;">
-  Notifications.
-</div>
-
-
-    <p style="color: #e9c46a; font-weight: 600; margin-top: 30px;">this website was programmed with</p>
-
-    <img src="css3-html5-logo-500px.png" alt="programmed with css and html" />
-
-    <hr />
-
-    <div class="left-section">
-      <h2>i kinda love making websites now</h2>
-      <p>im happy :D</p>
-    </div>
-    <script>
-  function showNotification(message) {
-    const notification = document.getElementById('notification');
-    notification.textContent = message;
-    notification.style.display = 'block';
-    notification.style.opacity = '1';
-    notification.style.transform = 'translateY(0)';
-    
-    // Hide after 3 seconds
-    setTimeout(() => {
-      notification.style.opacity = '0';
-      notification.style.transform = 'translateY(-20px)';
+    function showDialogue(text) {
+      dialogue.textContent = text;
+      dialogue.style.display = 'block';
       setTimeout(() => {
-        notification.style.display = 'none';
-      }, 500);
-    }, 3000);
-  }
-</script>
-
-  </body>
+        dialogue.style.display = 'none';
+      }, 3000);
+    }
+  </script>
+</body>
 </html>
