--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>hi omg you found my website XD :3</title>
+  <title>idk this is just a test site lol</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -45,16 +45,6 @@
       background-color: #357abd;
       box-shadow: 0 6px 12px rgba(53, 122, 189, 0.6);
     }
-    .glitch {
-      animation: glitch 0.3s ease-in-out;
-    }
-    @keyframes glitch {
-      0% { transform: translateX(0); }
-      25% { transform: translateX(-5px); }
-      50% { transform: translateX(5px); }
-      75% { transform: translateX(-5px); }
-      100% { transform: translateX(0); }
-    }
 
     #dialogue {
       position: fixed;
@@ -71,30 +61,68 @@
       font-family: monospace;
       box-shadow: 0 0 10px #0f0;
     }
+
+    .glitch {
+      animation: glitch 0.3s ease-in-out;
+    }
+
+    @keyframes glitch {
+      0% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      50% { transform: translateX(5px); }
+      75% { transform: translateX(-5px); }
+      100% { transform: translateX(0); }
+    }
+
+    #hidden-screen {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      color: #0f0;
+      font-family: monospace;
+      padding: 2em;
+      z-index: 999999;
+    }
+
+    .fake-file {
+      color: #aaa;
+      text-decoration: underline;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <h1>i kinda only made a github account for silly things</h1>
-  <h2>and i still use it for that</h2>
-  <p id="secret-text">there's literally nothing interesting here lol</p>
+  <h1>you probably shouldn’t be here</h1>
+  <h2 onclick="triggerSecret()">like seriously, go touch grass</h2>
+  <p id="secret-text">tf you even doing.</p>
+  <p class="fake-file" onclick="downloadFakeFile()">open_hidden-log.txt</p>
 
-  <button id="clickMe">dont click me fr</button>
+  <button id="clickMe">do NOT press this</button>
 
   <div id="dialogue"></div>
+  <div id="hidden-screen">INITIALIZING BACKDOOR ACCESS...<br>grabbing system paths...<br>injecting...</div>
 
   <script>
     let clicked = 0;
     const btn = document.getElementById('clickMe');
     const dialogue = document.getElementById('dialogue');
     const secretText = document.getElementById('secret-text');
+    const hiddenScreen = document.getElementById('hidden-screen');
 
     const narratorLines = [
-      "Why did you click that?",
-      "I said don't click it...",
-      "Okay now you're just being annoying.",
-      "Seriously. Stop.",
-      "I'm not a game. This isn't a game.",
-      "...fine. You want weird? You get weird."
+      "You again?",
+      "This button does NOTHING.",
+      "Seriously. You’re wasting your time.",
+      "Fine. Keep going. See what happens.",
+      "No no no. Don't.",
+      "WHY are you still here?!",
+      "You've triggered something.",
+      "it's watching now.",
+      "you can’t undo it.",
+      "good luck."
     ];
 
     btn.addEventListener('click', () => {
@@ -103,11 +131,12 @@
 
       if (clicked < narratorLines.length) {
         showDialogue(narratorLines[clicked]);
-      } else if (clicked === narratorLines.length) {
+      }
+      if (clicked === narratorLines.length - 1) {
         document.body.style.background = "#000";
-        secretText.textContent = "you’ve broken it.";
+        secretText.textContent = "you went too far.";
         secretText.style.color = "#0f0";
-        showDialogue("...you’ll regret this.");
+        document.body.style.color = "#0f0";
       }
       clicked++;
     });
@@ -119,6 +148,34 @@
         dialogue.style.display = 'none';
       }, 3000);
     }
+
+    function triggerSecret() {
+      showDialogue("you found that?");
+      setTimeout(() => {
+        hiddenScreen.style.display = 'block';
+        setTimeout(() => {
+          hiddenScreen.style.display = 'none';
+        }, 5000);
+      }, 1500);
+    }
+
+    function downloadFakeFile() {
+      showDialogue("downloading log...");
+      setTimeout(() => {
+        const blob = new Blob(["ERROR: SYSTEM BREACH\nFile integrity compromised.\nYOU SHOULD NOT BE HERE."], { type: "text/plain" });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = "hidden-log.txt";
+        a.click();
+        URL.revokeObjectURL(url);
+      }, 2000);
+    }
+
+    // Timed jumpscare easter egg
+    setTimeout(() => {
+      showDialogue("...still here?");
+    }, 60000); // after 1 minute
   </script>
 </body>
 </html>
